--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
@@ -26,7 +26,16 @@
       </ng-container>
     </form>
     <div *ngIf="dfaApplicationMainDataService.isSubmitted == true">
-      Submitted
+      Your application has been submitted.<br/><br/>
+
+      You may view the status of your application on your dashboard and a copy has been emailed to you at the email address provided.
+      While you must submit an application for each DFA property claim, do not submit more than one application for the same property.<br/><br/>
+
+      <b>Clean Up Log</b><br/>
+      You may continue to update the Clean Up Log. <br/><br/>
+
+      <b>Damaged Items</b><br/>
+      If further items are identified after submitting your application, please add them to the Damaged Items by Room list. <br/><br/>
     </div>
 
   </mat-card-content>
