--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -1,197 +1,37 @@
 <mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
-    <form [formGroup]="damagedItemsByRoomForm">
+    <form [formGroup]="supportingDocumentsForm">
 
-      <p class="sub-heading" style="font-size: 20px">Damaged Items by Room</p>
-      <br />
-
-      <div formGroupName="damagedRoom">
-        <ng-container>
-          <div class="row">
-            <div class="col-md-12">
-              <p class="sub-heading" style="font-size: 15px">
-                For each room, list items submitted for damage assessment. For example:
-              </p>
-              <img
-                src="/assets/images/example-damage.png"
-                class="example-damage-image"
-                alt="Example description"
-              />
-              <table mat-table [dataSource]="damagedRoomsDataSource" *ngIf="damagedRoomsDataSource.getValue().length > 0" style="width:100%">
-                <!-- Room Type Column -->
-                <ng-container matColumnDef="roomType" style="width:20%">
-                  <th mat-header-cell *matHeaderCellDef >
-                    <b>Room</b>
-                  </th>
-                  <td *matCellDef="let element" mat-cell>
-                    {{ element.roomType === RoomTypes.Other ? element.otherRoomType : element.roomType }}
-                  </td>
-                </ng-container>
-
-                <!-- Description Column -->
-                <ng-container matColumnDef="description">
-                  <th mat-header-cell *matHeaderCellDef>
-                    <b>Damaged Items</b>
-                  </th>
-                  <td *matCellDef="let element" mat-cell>
-                    {{ element.description}}
-                  </td>
-                </ng-container>
-
-                <!-- Delete & Edit Icons Column -->
-                <ng-container matColumnDef="icons" style="width:20%">
-                  <th mat-header-cell *matHeaderCellDef>
-                    &nbsp;
-                  </th>
-                  <td *matCellDef="let element; let index = index" mat-cell>
-                    <button
-                      class="edit-image"
-                      mat-icon-button
-                      aria-label="Edit"
-                      (click)="editDamagedRoomRow(element, index)"
-                    >
-                      <img src="/assets/images/edit.svg" height="35" width="35" />
-                      <img
-                        src="/assets/images/edit_onhover.svg"
-                        height="35"
-                        width="35"
-                      />
-                    </button>&nbsp;
-                    <button
-                      class="delete-image"
-                      mat-icon-button
-                      aria-label="Remove"
-                      (click)="deleteDamagedRoomRow(index)"
-                    >
-                      <img src="/assets/images/delete.svg" height="35" width="35" />
-                      <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
-                    </button>
-                  </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="damagedRoomColumnsToDisplay"></tr>
-                <tr
-                  mat-row
-                  *matRowDef="let element; columns: damagedRoomColumnsToDisplay"
-                  class="example-element-row"
-                  [style.height]="'auto'"
-                ></tr>
-
-              </table>
-
-              <div  *ngIf="damagedRoomsDataSource.getValue().length > 0">
-                <br /><br/>
-              </div>
-
-              <button
-                *ngIf="!showDamagedRoomForm"
-                class="family-button"
-                mat-button
-                type="button"
-                (click)="addDamagedRoom()"
-              >
-                + Add Room & Items
-              </button>
-
-              <mat-card *ngIf="showDamagedRoomForm">
-                <p class="sub-heading" style="font-size: 15px">
-                  New room and items
-                </p>
-                <div class="row">
-                  <div class="col-md-4">
-                    <mat-form-field appearance="outline">
-                      <mat-label>Select a room type</mat-label>
-                      <mat-select formControlName="roomType" matInput placeholder="Full-time occupant first name" required (selectionChange)="onSelectRoomType($event.value)">
-                        <mat-option *ngFor="let option of RoomTypes | keyvalue: originalOrder" [value]="option.key">{{ option.value }}</mat-option>
-                      </mat-select>
-                      <mat-error
-                        *ngIf="
-                          damagedItemsByRoomForm.get('damagedRoom').controls.roomType.invalid &&
-                          damagedItemsByRoomForm.get('damagedRoom').controls.roomType.hasError('required') &&
-                          damagedItemsByRoomForm.get('damagedRoom').controls.roomType.touched
-                        "
-                      >
-                        Room type is required</mat-error
-                      >
-                      <mat-hint *ngIf="showGarageHint"> Attached garages only; detached garages can`t be included</mat-hint>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" *ngIf="showOtherRoomType === true">
-                      <mat-label>Please specify Other room</mat-label>
-                      <input formControlName="otherRoomType" matInput placeholder="Please specify Other room" required/>
-                      <mat-error
-                        *ngIf="
-                          damagedItemsByRoomForm.get('damagedRoom').controls.otherRoomType.invalid &&
-                          damagedItemsByRoomForm.get('damagedRoom').controls.otherRoomType.hasError('required') &&
-                          damagedItemsByRoomForm.get('damagedRoom').controls.otherRoomType.touched
-                        "
-                      >
-                        Other room type is required</mat-error
-                      >
-                    </mat-form-field>
-                  </div>
-                  <div class="col-md-8">
-                    <mat-form-field appearance="outline">
-                      <mat-label>Damaged Items</mat-label>
-                      <textarea matInput
-                        formControlName="description"
-                        placeholder="Damaged Items"
-                        [rows]="5"
-                        style="resize:none"
-                        required
-                        (keyup)="calcRemainingChars()"></textarea>
-                      <mat-error
-                        *ngIf="
-                          damagedItemsByRoomForm.get('damagedRoom').controls.description.invalid &&
-                          damagedItemsByRoomForm.get('damagedRoom').controls.description.hasError('required') &&
-                          damagedItemsByRoomForm.get('damagedRoom').controls.description.touched
-                        "
-                      >
-                        Description is required</mat-error
-                      >
-                    </mat-form-field>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-md-6">
-                    <button
-                      class="button-s details-button"
-                      mat-button
-                      type="button"
-                      (click)="cancelDamagedRooms()"
-                    >
-                      Cancel
-                    </button>
-                  </div>
-                  <div class="col-md-6">
-                    <button
-                      class="family-button details-button save-button"
-                      mat-button
-                      type="button"
-                      (click)="saveDamagedRooms()"
-                    >
-                      Save
-                    </button>
-                  </div>
-                </div>
-
-              </mat-card>
-            </div>
-
-          </div>
-        </ng-container>
-      </div>
+      <p class="sub-heading" style="font-size: 20px">Supporting Documents</p>
+      On this page provide the required and other supporting documents.
       <br/><br/>
 
-      <div formGroupName="fileAttachment">
+      <div formGroupName="insuranceTemplate">
         <ng-container>
           <div clas="row">
             <div class="col-md-12">
-              <p class="sub-heading" style="font-size: 15px">
-                If you have photos of damaged items, please have them available during the site meeting to help the evaluator identify eligible costs. You may also attach them to this application.
-              </p>
-              <table mat-table [dataSource]="fileAttachmentsDataSource" *ngIf="fileAttachmentsDataSource.getValue().length > 0" style="width:100%">
+              <p class="sub-heading" style="font-size: 15px">Required Documents</p>
+              You must provide the following document before you can submit your application:
+              <ul>
+                <li>Insurance template completed by your insurance broker</li>
+              </ul>
+              <p class="sub-heading" style="font-size: 15px">Upload Required Documents</p>
+              <b>Insurance Template<span style="color:red;">*</span></b><br/>
+              Attach the insurance template completed by your insurance broker.<br/>
+              <a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_homeowners_insurance_template.pdf">Download a copy of the home owners, residential tenants, and landlord insurance template (PDF, 164 kb)</a><br/><br/>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+
+      <div formGroupName="supportingDocument">
+        <ng-container>
+          <div clas="row">
+            <div class="col-md-12">
+              <p class="sub-heading" style="font-size: 15px">Other Supporting Documents (Optional)</p>
+              If applicable, you may include additional documents related to your application.<br/>
+              <table mat-table [dataSource]="supportingDocumentsDataSource" *ngIf="supportingDocumentsDataSource.getValue().length > 0" style="width:100%">
                 <!-- File Name Column -->
                 <ng-container matColumnDef="fileName" style="width:25%">
                   <th mat-header-cell *matHeaderCellDef >
@@ -232,7 +72,7 @@
                       class="delete-image"
                       mat-icon-button
                       aria-label="Edit"
-                      (click)="editFileAttachmentRow(element, index)"
+                      (click)="editSupportingDocumentRow(element, index)"
                     >
                       <img src="/assets/images/edit.svg" height="35" width="35" />
                       <img
@@ -245,7 +85,7 @@
                       class="delete-image"
                       mat-icon-button
                       aria-label="Remove"
-                      (click)="deleteFileAttachmentRow(index)"
+                      (click)="deleteSupportingDocumentRow(index)"
                     >
                       <img src="/assets/images/delete.svg" height="35" width="35" />
                       <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
@@ -253,31 +93,31 @@
                   </td>
                 </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="fileAttachmentColumnsToDisplay"></tr>
+                <tr mat-header-row *matHeaderRowDef="supportingDocumentColumnsToDisplay"></tr>
                 <tr
                   mat-row
-                  *matRowDef="let element; columns: fileAttachmentColumnsToDisplay"
+                  *matRowDef="let element; columns: supportingDocumentColumnsToDisplay"
                   class="example-element-row"
                   [style.height]="'auto'"
                 ></tr>
 
               </table>
 
-              <div  *ngIf="fileAttachmentsDataSource.getValue().length > 0">
+              <div  *ngIf="supportingDocumentsDataSource.getValue().length > 0">
                 <br /><br/>
               </div>
 
               <button
-                *ngIf="!showFileAttachmentForm"
+                *ngIf="!showSupportingDocumentForm"
                 class="family-button"
                 mat-button
                 type="button"
-                (click)="addFileAttachment()"
+                (click)="addSupportingDocument()"
               >
                 + Add Photos
               </button>
 
-              <mat-card *ngIf="showFileAttachmentForm">
+              <mat-card *ngIf="showSupportingDocumentForm">
                 <div class="row">
                   <div class="col-md-6">
                     <label class="sub-heading" style="font-size: 15px"
@@ -291,23 +131,23 @@
                   </div>
                   <div class="col-md-6">
                     <br/><br/>
-                    <div [hidden]="!damagedItemsByRoomForm.get('fileAttachment.fileData').value">
+                    <div [hidden]="!supportingDocumentsForm.get('supportingDocument.fileData').value">
                       <mat-label>File name<span style="color:red" >*</span></mat-label>
                       <br/>
-                      {{ damagedItemsByRoomForm.get('fileAttachment.fileName').value }}
+                      {{ supportingDocumentsForm.get('supportingDocument.fileName').value }}
                       <br/><br/>
                     </div>
-                    <label class="sub-heading" style="font-size: 15px" [hidden]="!damagedItemsByRoomForm.get('fileAttachment.fileData').value"
+                    <label class="sub-heading" style="font-size: 15px" [hidden]="!supportingDocumentsForm.get('supportingDocument.fileData').value"
                       >You may update the file description to something more descriptive:</label
                     >
-                    <mat-form-field appearance="outline" [hidden]="!damagedItemsByRoomForm.get('fileAttachment.fileData').value">
+                    <mat-form-field appearance="outline" [hidden]="!supportingDocumentsForm.get('supportingDocument.fileData').value">
                       <mat-label>File description</mat-label>
                       <input formControlName="fileDescription" matInput placeholder="File description" required/>
                       <mat-error
                         *ngIf="
-                          damagedItemsByRoomForm.get('fileAttachment').controls.fileDescription.invalid &&
-                          damagedItemsByRoomForm.get('fileAttachment').controls.fileDescription.hasError('required') &&
-                          damagedItemsByRoomForm.get('fileAttachment').controls.fileDescription.touched
+                          supportingDocumentsForm.get('supportingDocument').controls.fileDescription.invalid &&
+                          supportingDocumentsForm.get('supportingDocument').controls.fileDescription.hasError('required') &&
+                          supportingDocumentsForm.get('supportingDocument').controls.fileDescription.touched
                         "
                       >
                         File description is required</mat-error
@@ -323,7 +163,7 @@
                       class="button-s details-button"
                       mat-button
                       type="button"
-                      (click)="cancelFileAttachments()"
+                      (click)="cancelSupportingDocuments()"
                     >
                       Cancel
                     </button>
@@ -333,7 +173,7 @@
                       class="family-button details-button save-button"
                       mat-button
                       type="button"
-                      (click)="saveFileAttachments()"
+                      (click)="saveSupportingDocuments()"
                     >
                       Save
                     </button>
